HEAD
	+ Fix regression in showing the Administrator account
4.0.1
	+ A change in first or last name make DN to change
	+ Do not show administrator password in provision command
	+ Fix ADC mode from the wizard
4.0
	+ Re-enable user synchronization with Zentyal Cloud
	+ Proper notifications when a share is sync'ed with Zentyal Cloud
	+ Fix realUsers count to remove Administrator and Guest account from it
	+ Write broker configuration for mapiproxy server in openchange.conf
	+ Add daemon to check users and groups to have uidNumber and gidNumber
	+ Add confirmation when removing mail account via the edit user form
	+ Add hostname change confirmation dialog to wizard
	+ Fixed EBox::LDAPBase::lastModificationTime
	+ Join as additional domain controller on initial configuration wizard
	+ Name in Module Status is now "Domain Controller and File Sharing"
	+ Set version to 4.0
	+ Fix migration to preserve group type
	+ Do not complain about lack of ACL support with XFS filesystem
	+ Better error message when the root DSE is not found in external
	  AD mode
	+ Do not try to dump config backup if not provisioned
	+ Check samAccountName is unique in entire domain adding users and groups
	+ Ignore cloud-sync warnings from cron
	+ Check DN not exists on the same container creating contacts
	+ Add missing 'use EBox::LDAP::ExternalAD' to Samba.pm
	+ Improve save changes speed avoiding loop in postServiceHook if no changes
	  made to roaming profiles
	+ Implement nameserverAdded and nameserverDelete from NetworkObserver to
	  reset LDAP connection if name servers change in external AD mode
	+ Add dpkg trigger to restart module when samba package is upgraded
	+ Fix ad-migrate script mode check
	+ Adapted to changes in group mail account
	+ Show a warning on post save changes dialog if errors happend while
	  setting shares ACLs
	+ Do not check for acl and user_xattr filesystem options if filesystem is
	  btrfs
	+ Provision: Check domain netbios name is not equal to host netbios name