@@ -1,4 +1,6 @@
 HEAD
+	+ Avoid notifying slaves while setting the password as it is does
+	  by addUser called below
 	+ Fix regression in showing the Administrator account
 4.0.1
 	+ A change in first or last name make DN to change
